Scaffold arrow-memory-ffm module with FfmMemoryAccessor
- New opt-in module, Java 22+ only (java.lang.foreign JEP 454),
  only enters the Maven reactor when building with a JDK 22+
  launcher
- FfmMemoryAccessor implements MemoryUtilAccessor using
  MemorySegment/Arena instead of sun.misc.Unsafe/reflection